Bug #2983 If statement was killed on master, slave errors despite replicate-wild-ignore-t
Submitted: 26 Feb 2004 15:35 Modified: 11 Mar 2004 8:50
Reporter: Guilhem Bichot Email Updates:
Status: Closed
Category:Server: Replication Severity:S3 (Non-critical)
Version:4.0 OS:Any (all)
Assigned to: Guilhem Bichot Target Version:

[26 Feb 2004 15:35] Guilhem Bichot
Description:
see how-to-repeat

How to repeat:
Have --replicate-wild-ignore-table=test.% on slave;
on master run a long statement like
INSERT INTO test.t SELECT * from test.u
and kill it before it finishes.
On slave you will get:
query 'insert into test.t select * from test.u' partially completed on the master and was aborted. There is a chance that your master is inconsistent at this point. If you are sure that your master is ok, run this query manually on the slave and then restart the slave with SET GLOBAL SQL_SLAVE_SKIP_COUNTER=1; SLAVE START; .

whereas we would expect the slave to not complain, as the table is supposed to be ignored, given the replicate-wild-ignore-table.

Suggested fix:
will fix this.
[11 Mar 2004 8:50] Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

fixed in ChangeSet@1.1746, 2004-03-11 17:38:19+01:00, guilhem@mysql.com